fixing closed comment

--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -5,5 +5,6 @@
 
 /* applies to any <p> descendants of an element of class "example-class-selector" */
 .example-class-selector p {
-	/* selects
+	/* Colors are in hexadecimal: http://www.colorpicker.com/ */	
+	color: #CC00AA;
 }
