--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -9,9 +9,19 @@
 	color: #CC00AA;
 }
 
-.project {
-	margin-left: 20px;
-	background-color: #eeeeee;
-	padding: 20px;
-	width: 525px;
+.jumbotron {
+	position: relative;
+	background: none;
+}
+
+.jumbotron:after {
+     content:"";
+     background: url("http://lorempixel.com/1140/283");
+     opacity: 0.2;
+     top: 0;
+     left: 0;
+     bottom: 0;
+     right: 0;
+     position: absolute;
+     z-index: -1;	
 }
