gives the body an outline and project divs an id

--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -9,6 +9,13 @@
 	color: #CC00AA;
 }
 
+/* this style exists to make it obvious that you've successfully linked
+   the CSS to the page. feel free to remove it once the link is working. */
+body {
+     border: 1px dotted gray;
+     padding: 20px;
+}
+
 .jumbotron {
 	position: relative;
 	background: none;
